desafio mongo y handlebar, chat completo

--- a/src/views/chat.handlebars
+++ b/src/views/chat.handlebars
@@ -20,9 +20,20 @@
     </div>
 </div> --}}
 <div>
-    {{#each messages}}
-    <div>
-        <p>{{this.email}}: {{this.message}}</p>
+    <div id="messagesContainer">
+        {{#each messages}}
+        <div>
+            <p>{{this.email}}: {{this.message}}</p>
+        </div>
+        {{/each}}
     </div>
-    {{/each}}
+    <div>
+        <form id="messageForm">
+            <input type="text" id="email" name="email" placeholder="Email" required>
+            <input type="text" id="message" name="message" placeholder="Escribe tu mensaje" required>
+            <button type="button" id="enviarMensaje">Enviar</button>
+        </form>
+    </div>
 </div>
+
+
