--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -12,6 +12,6 @@
     {{{body}}}
     {{>footer}}
     <script src="https://cdn.socket.io/4.7.2/socket.io.min.js"></script>
-    {{!-- <script src="/js/script.js"></script> --}}
+    <script src="/js/script.js"></script>
 </body>
 </html>
