chat funcionando y scroll

--- a/src/views/chat.handlebars
+++ b/src/views/chat.handlebars
@@ -19,7 +19,7 @@
         </form>
     </div>
 </div> --}}
-<div>
+<div class="contenedor">
     <div id="messagesContainer">
         {{#each messages}}
         <div>
