--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -1,3 +1,37 @@
 body {
-    background-color: aquamarine;
+    background-color: rgb(53, 106, 165);
+    color: aliceblue;
+}
+.contenedor {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    background-color: rgb(40, 40, 158);
+    margin: 0 10vw;
+}
+
+#messagesContainer {
+    height: 400px;
+    overflow-y: auto;
+    border: 3px solid white;
+    padding: 0 20px;
+}
+
+#messageForm {
+    margin: 20px 0
+}
+nav {
+    display: flex;
+    justify-content: space-between;
+    margin: 0 40px 0 5px;
+}
+
+nav ul li {
+    list-style: none;
+}
+
+nav ul {
+    display: flex;
+    gap: 10px;
+    align-items: center;
 }
