--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -8,18 +8,48 @@ body {
     justify-content: center;
     background-color: rgb(40, 40, 158);
     margin: 0 10vw;
+    padding: 10px;
+    border-radius: 5px;
 }
 
 #messagesContainer {
     height: 400px;
     overflow-y: auto;
-    border: 3px solid white;
+    border: 2px solid white;
+    border-radius: 5px;
     padding: 0 20px;
 }
 
 #messageForm {
-    margin: 20px 0
+    margin: 20px 10px;
+    font-size: 20px;
+    
 }
+
+#messageForm button {
+    background-color: rgb(53, 106, 165);
+    border: solid white 2px;
+    border-radius: 5px;
+    padding: 8px 15px;
+    margin-left: 40px;
+}
+
+#messageForm input {
+    background-color: rgb(40, 40, 158);
+    height: 25px;
+    width: 300px;
+    color: white;
+    border: white solid 2px;
+    border-radius: 10px;
+    padding-left: 10px;
+    margin-right: 15px;
+}
+
+#messageForm input::placeholder {
+    color: rgb(222, 222, 222);
+    opacity: 90%;
+}
+
 nav {
     display: flex;
     justify-content: space-between;
