--- a/src/views/partials/footer.handlebars
+++ b/src/views/partials/footer.handlebars
@@ -5,5 +5,5 @@
         <li>Condiciones</li>
         <li>Contacto</li>
     </div>
-    <div><h5>hola</h5></div>
+    <div><h5>Instagram</h5></div>
 </footer>
