E:/Git/products vista 1

--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -22,6 +22,10 @@ footer {
     border-radius: 5px;
 }
 
+#detallesProducto {
+    background-color: blue;
+}
+
 #messagesContainer {
     height: 400px;
     overflow-y: auto;
