--- a/src/views/partials/nav.handlebars
+++ b/src/views/partials/nav.handlebars
@@ -2,8 +2,8 @@
     <h1>Marca</h1>
     <ul>
         <li>Camisetas</li>
-        <li>Shorts</li>
-        <li>Otros</li>
+        <li>Pantalones</li>
+        <li>Camperas</li>
         <li>Contacto</li>
         <li>Home</li>
     </ul>
