sessions login terminado

--- a/src/views/partials/nav.handlebars
+++ b/src/views/partials/nav.handlebars
@@ -1,9 +1,7 @@
 <nav>
     <h1>Marca</h1>
     <ul>
-        <li>Camisetas</li>
-        <li>Pantalones</li>
-        <li>Camperas</li>
+        <li>Login/Register</li>
         <li>Contacto</li>
         <li>Home</li>
     </ul>
