--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -1,10 +1,10 @@
-<div>
+<div class="loginStyle">
     <h2>Login</h2>
     <form id="loginForm">
         <input type="text" id="email" placeholder="Email" required>
         <input type="text" id="password" placeholder="Password" required>
         <button type="submit">Login</button>
     </form>
-    
 </div>
+<button id="registroBtn">Registrarme</button>
 <script src="/js/login.js"></script>
