--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -7,4 +7,15 @@
     </form>
 </div>
 <button id="registroBtn">Registrarme</button>
+<div class="registroStyle" style="display: none;">
+    <h2>Registro</h2>
+    <form id="registroForm">
+        <input type="text" id="first_name" placeholder="Nombre" required>
+        <input type="text" id="last_name" placeholder="Apellido" required>
+        <input type="text" id="age" placeholder="Edad" required>
+        <input type="text" id="email" placeholder="Email" required>
+        <input type="text" id="password" placeholder="Contraseña" required>
+        <button type="submit">Registrarme</button>
+    </form>
+</div>
 <script src="/js/login.js"></script>
