--- a/src/views/partials/nav.handlebars
+++ b/src/views/partials/nav.handlebars
@@ -6,9 +6,7 @@
             <button type="submit">Cerrar sesión</button>
         </form>
         {{/if}}
-        <li>Login</li>
-        <li>Register</li>
         <li>Contacto</li>
-        <li>Home</li>
+        <li>Nosotros</li>
     </ul>
 </nav>
