sessions3 register final3

--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -1,6 +1,6 @@
 {{#if login}}
 <div class="welcome-message">
-    <p>Bienvenido, {{userData.firstName}} {{userData.lastName}}!</p>
+    <p>Bienvenido, {{userData.rol}} {{userData.firstName}} {{userData.lastName}}!</p>
 </div>
 {{/if}}
 
